syntax = "proto3";

package dashboard.admin;

option go_package = "github.com/gatewayorg/blue-dashboard/api/protos/admin;admin";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";


service PublicAdmin {
    rpc CreateUri(CreateUrlReq) returns(google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/admin/uri"
            body:"*"
        };
    }
    rpc GetUriList(google.protobuf.Empty) returns(google.protobuf.Empty) {
        option (google.api.http) = {
            get: "/admin/uri/list"
        };
    }
}


message CreateUrlReq {
    string username = 1;
    string passwd = 2;
    string uri = 3 [(validate.rules).string.min_len = 1];
    string srv_uri = 4 [(validate.rules).string.min_len = 1];
}

